# Agent

./: .env.example  .gitignore  README.md  cli.py  main.py  pyproject.toml  requirements.txt
app/: agent_service.py  interview_questions.py  llm_config.py  main.py  pipeline.py  prompts.py  schemas.py
app/static/: index.html
app/static/interview-assets/: .gitignore  README.md
depression_detection/: __init__.py
depression_interview_demo/: README.md  cli.py  main.py
depression_interview_demo/app/: interview_questions.py  llm_config.py  main.py  pipeline.py  prompts.py  schemas.py
depression_interview_demo/app/static/: index.html
docs/: api-contracts.md  architecture.md
scripts/: run_api.py
src/depression_detection/application/: validation.py
src/depression_detection/bootstrap/: container.py
src/depression_detection/config/: model_settings.py  settings.py
src/depression_detection/domain/: contracts.py  enums.py
src/depression_detection/model/: loader.py  registry.py  schemas.py
src/depression_detection/preprocessing/: audio_extraction.py  schemas.py
src/depression_detection/shared/: exceptions.py  logging.py  tempfiles.py
tests/: test_api_compat_regression.py  test_session_summary_reuse.py
tests/contract/: test_predictor_interfaces.py
tests/integration/api/: test_interview_archive_routes.py  test_v1_routes.py
tests/unit/application/: test_archive_service.py  test_tempfiles.py
tests/unit/config/: test_settings.py
tests/unit/model/: test_loader.py  test_registry.py  test_schemas.py
tests/unit/preprocessing/: test_audio_extraction.py  (+3 more)
(+50 files in other folders)
