[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depression-detection"
version = "0.1.0"
description = "Multimodal depression detection service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain>=1.2.15",
  "langchain-google-genai>=2.1.5",
  "langchain-community>=0.3.31",
  "PyJWT>=2.10.1",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.6",
  "pydantic>=2.8.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
